<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">




    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/main_media_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/exoplayer"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:resize_mode="fixed_width"
                    android:gravity="center" />
            </FrameLayout>

            <TextView
                android:id="@+id/step_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="DASDAET lasndljasndlanldaonwdl wadnalskndlk anslkdn alkdnasnd klasndlk nalksdn klasndklasndlkasndln luwanld wnal"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>